# symbolica

./: .gitignore  Benchmark Task.md  README.md  ResearchFraming.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: AS_IS_ANALYSIS.md  CORRECTNESS_BUGS.md  DEEP_RESEARCH_PROMPT.md  NFR.md  PRD.md  REBUILD_DESIGN.md  RESEARCH_SYNTHESIS.md  USER_FLOWS.md  api-reference.md  getting-started.md  symbolica-correctness-bugs.md  symbolica-deep-research-agent-authored.md  symbolica-nfr.md  symbolica-prd.md  symbolica-rule-engine-research.md  symbolica-user-flows.md
docs/analysis/: symbolica-rebuild-design.md  symbolica-research-synthesis.md
docs/architecture/: symbolica-architecture.md  symbolica-spec.md
docs/implementation/: symbolica-implementation-plan.md
docs/product/: symbolica-evaluation.md  symbolica-nfr.md  symbolica-prd.md  symbolica-user-flows.md
examples/: README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFACTORING_STATUS_V1.md  basic_usage.py  complete_cross_domain_demo.py  cross_domain_test.py  database_troubleshooting.py  income_tax_processing.py  insurance_claims_processing.py  json_demo.py  refactoring_demo.py  scalability_demo.py  simple_engine_demo.py  unified_engine_demo.py
examples/database-troubleshooting/: cache-efficiency-pattern.yaml  connection-pool-exhausted.yaml  cpu-saturation.yaml  disk-io-bottleneck.yaml  index-fragmentation-high.yaml  lock-contention-detected.yaml  memory-pressure-high.yaml  replication-lag-detected.yaml  slow-query-performance.yaml  transaction-log-growth-abnormal.yaml
examples/income-tax/: amt-trigger-evaluation.yaml  child-tax-credit-eligible.yaml  early-retirement-withdrawal-penalty.yaml  education-credit-eligibility.yaml  eitc-eligibility.yaml  foreign-income-exclusion-applicable.yaml  long-term-capital-gains-eligible.yaml  salt-deduction-capped.yaml  underreported-foreign-income.yaml
examples/insurance-claims/: duplicate-invoice-claim.yaml  expired-policy.yaml  fast-claim-after-policy-start.yaml  high-risk-area-theft.yaml  high-value-claim.yaml  missing-beneficiary-info.yaml  missing-police-report.yaml  natural-disaster-exclusion.yaml  pre-existing-condition-exclusion.yaml  repeat-claim-detected.yaml
symbolica/: __init__.py  _version.py
symbolica/backends/: __init__.py  memory_backend.py
symbolica/bridges/: __init__.py  langraph_hooks.py  llm_bridge.py  semantic_kernel_hooks.py
symbolica/core/: __init__.py  fact_store.py  inference.py  optimized_rule_engine.py  rule_engine.py
symbolica/parsers/: __init__.py  json_parser.py  yaml_parser.py
symbolica/utils/: __init__.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_fact_store.py  test_json_interface.py  test_parsers.py  test_rule_engine.py
(+9 files in other folders)
