[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolica"
description = "Symbolic reasoning engine for LLM agents with natural language explanation capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Symbolica Team", email = "team@symbolica.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
graph = [
    "neo4j>=5.0.0",
    "py2neo>=2021.2.3",
]
distributed = [
    "ray>=2.0.0",
    "dask>=2023.1.0",
]
agents = [
    "langgraph>=0.0.20",
    "semantic-kernel>=0.4.0",
]
all = [
    "symbolica[dev,graph,distributed,agents]"
]

[project.urls]
Homepage = "https://github.com/symbolica-ai/symbolica"
Documentation = "https://docs.symbolica.dev"
Repository = "https://github.com/symbolica-ai/symbolica"
"Bug Tracker" = "https://github.com/symbolica-ai/symbolica/issues"

[project.scripts]
symbolica = "symbolica.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["symbolica*"]

[tool.setuptools_scm]
write_to = "symbolica/_version.py"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=symbolica --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto" 